<resources>
    <string name="app_name">Lorenzo\'s Kitchen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="last_name">Last Name</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="account_information">Account Information</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="browse_for_the_profile_image">Click to Browse Profile Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="account_type">Account Type</string>
    <string name="update_account">Update Account</string>
    <string name="log_out_account">Logout Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="profile_information">Profile Information</string>
</resources>