<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="35dp"
            android:paddingBottom="15dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardContainer"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:strokeWidth="2dp"
                app:strokeColor="?attr/colorSecondary"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:clipToPadding="false"
                    android:padding="30dp">


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_information"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="22sp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"/>

                    <LinearLayout
                        android:id="@+id/viewPersonalProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgProfileImage"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:background="?attr/colorSecondaryContainer"
                            app:shapeAppearanceOverlay="@style/RoundedImageStyle"/>



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="15sp"
                            android:text="@string/personal_profile"/>


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center_horizontal"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtFullName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:singleLine="true"
                                android:ems="10"
                                android:hint="@string/full_name"
                                android:inputType="none"
                                />

                        </com.google.android.material.textfield.TextInputLayout>


                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center_horizontal">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtBirthday"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:singleLine="true"
                                android:ems="10"
                                android:hint="@string/birthday"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:orientation="horizontal"
                            >


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtGender"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:singleLine="true"
                                android:ems="10"
                                android:hint="@string/gender"
                                android:inputType="date" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center_horizontal">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:singleLine="true"
                                android:ems="10"
                                android:hint="@string/address"
                                android:inputType="textFilter" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center_horizontal">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:singleLine="true"
                                android:ems="10"
                                android:hint="@string/phone_number"
                                android:inputType="phone|number" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp"
                        android:text="@string/account_information"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtAccountType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:singleLine="true"
                            android:ems="10"
                            android:hint="@string/account_type"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:singleLine="true"
                            android:ems="10"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        app:passwordToggleEnabled="true"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:singleLine="true"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"  />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:strokeWidth="2dp"
                app:strokeColor="?attr/colorSecondary"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manage_account"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="22sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />


                    <TextView
                        android:id="@+id/btnUpdateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textSize="15sp"
                        android:text="@string/update_account"/>

                    <TextView
                        android:id="@+id/btnLogoutAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textSize="15sp"
                        android:text="@string/log_out_account"/>

                    <TextView
                        android:id="@+id/btnDeleteAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textSize="15sp"
                        android:text="@string/delete_account"/>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>
</FrameLayout>